fix overflow

--- a/src/plugins/picture-in-picture/style.less
+++ b/src/plugins/picture-in-picture/style.less
@@ -30,6 +30,7 @@
       position: absolute;
       bottom: 0;
       background: black;
+      overflow-x: clip;
     }
 
     &:hover>.ppt_opr_con {
